# FinancesPy

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  main.py  notebook.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/: template.xlsx
.github/workflows/: ci.yml
docs/: conf.py  index.rst
examples/: README.md  predicate_demo.py
finances/: __init__.py  account.py  categories.py  clutil.py  filesystem_backend.py  main.py  money.py  time_factory.py  transaction.py
financespy/: __init__.py  _version.py  account.py  backend.py  categories.py  charting.py  clutil.py  exceptions.py  filesystem_backend.py  gnucash_backend.py  logging_config.py  main.py  memory_backend.py  models.py  money.py  predicate_compiler.py  setup.py  sql_backend.py  sql_predicate_compiler.py  time_factory.py  transaction.py  xlsx_backend.py
financespy/FinancesPy.egg-info/: PKG-INFO  SOURCES.txt
financespy/backends/: __init__.py  combined_backend.py  csv_folder_backend.py  filesystem_backend.py  gnucash_backend.py  memory_backend.py  sql_backend.py  template.xlsx  xlsx_backend.py
financespy/dashboards/: __init__.py  charts.py  dashboard.py  formula.py  reducers.py  treemap.py
financespy/financespy.egg-info/: PKG-INFO  SOURCES.txt
sample_scripts/: generate.py  main.py  test.py
tests/: conftest.py  test_account.py  test_categories.py  test_charts.py  test_combined_backend.py  test_csv_folder_backend.py  test_dashboard.py  test_filesystem_backend.py  test_formula.py  test_gnucashbackend.py  test_memory_backend.py  test_money.py  test_predicate_compiler.py  test_sql_backend.py  test_sql_predicate_compiler.py  test_utils.py  test_xlsx_backend.py
tests/resources/external_categories/: categories.json
tests/resources/external_categories/account1/: account.json
tests/resources/finances/: 2019.xlsx  account.json
tests/resources/finances_csv/: account.json
tests/resources/finances_csv/2019/: jan.csv
tests/resources/finances_csv/2019/sep/: 11.csv  13.csv  19.csv  20.csv  21.csv  4.csv  6.csv  8.csv
tests/resources/gnucash/: myacc.gnucash  myacc.json
tests/resources/receipts/: 02-02-2025_edeka.csv  02-02-2025_lidl.csv  05-02-2025.csv  account.json  categories.json
tests/resources/receipts/subdir/: 03-02-2025_rewe.csv
ws/2018/mar/: 1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
